cmake_minimum_required(VERSION 3.9)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(cpp Programming_PrinciplesAndPracticeUsingCPP/Chapter09/exercise.9.5-9.cpp
        Programming_PrinciplesAndPracticeUsingCPP/Chapter09/exercise.9.5-9.Library.h
        Programming_PrinciplesAndPracticeUsingCPP/Chapter09/exercise.9.5-9.Library.cpp
        Programming_PrinciplesAndPracticeUsingCPP/Chapter09/exercise.9.5-9.Chrono.h
        Programming_PrinciplesAndPracticeUsingCPP/Chapter09/exercise.9.5-9.Chrono.cpp)